Closed Bug 642164 Opened 15 years ago Closed 15 years ago

JM: [infer failure] Missing type in object #4:0:Object x: float

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: decoder, Unassigned)

References

Details

(Keywords: crash, testcase, Whiteboard: fixed-in-jaegermonkey)

The following test case (run with -n -a -m) crashes on JM tip (tested on 64 bit): function raisesException(exception) { return function (code) { eval(code); }; }; function obj() { var o = { assertEq: true, y: 1 }; Object.defineProperty(o, 'x', { writable: false }); return o; } function in_strict_with(expr) { return "with(obj()) { (function () { 'use strict'; " + expr + " })(); }"; } assertEq(raisesException(TypeError)(in_strict_with('x++;')), true);
Remove some cruft when handling arithmetic overflow on INCNAME/etc. that set the result of the increment before updating the type sets to reflect the new value. http://hg.mozilla.org/projects/jaegermonkey/rev/84090709049e
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: fixed-in-jaegermonkey
A testcase for this bug was automatically identified at js/src/jit-test/tests/basic/bug642164.js.
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.