[INFER] Remove cruft for handling overflowing INCNAME/etc. ops, bug 642164.